# jaxgboost

./: README.md  pyproject.toml
jaxgboost/: __init__.py  booster.py  losses.py  sklearn.py
jaxgboost/tree_builders/: __init__.py  base.py  exact_layerwise.py  exact_layerwise_pmap.py  exact_layerwise_vmap.py  exact_lossguide.py
jaxgboost/trees/: tree.py
notebooks/: example_parameters_gradient.ipynb  example_regression.ipynb  example_vectorization_and_parallelization.ipynb
